Fix email icon color in dark mode

--- a/packages/commonwealth/client/styles/components/component_kit/cw_wallets_list.scss
+++ b/packages/commonwealth/client/styles/components/component_kit/cw_wallets_list.scss
@@ -28,6 +28,10 @@
         padding-bottom: 0;
 
         @include visibleScrollbar(dark);
+
+        .WalletOptionRow .email-auth-btn {
+          stroke: $white  !important;
+        }
       }
     }
 
